--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ django-cors-headers==3.13.0
 python-decouple==3.7
 transbank-sdk==5.0.0
 Pillow==10.3.0
+django-crontab==0.7.1
+bcchapi==1.0.1
+pandas==2.2.2
+numpy==1.26.4
+six==1.16.0
+python-dateutil==2.9.0
